--- a/package.json
+++ b/package.json
@@ -9,64 +9,66 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "^1.3.0",
-    "@hookform/resolvers": "^3.12.0",
-    "@radix-ui/react-accordion": "^1.3.0",
-    "@radix-ui/react-alert-dialog": "^1.2.0",
-    "@radix-ui/react-aspect-ratio": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.2.0",
-    "@radix-ui/react-checkbox": "^1.4.0",
-    "@radix-ui/react-collapsible": "^1.2.0",
-    "@radix-ui/react-context-menu": "^2.3.0",
-    "@radix-ui/react-dialog": "^1.2.0",
-    "@radix-ui/react-dropdown-menu": "^2.2.0",
-    "@radix-ui/react-hover-card": "^1.2.0",
-    "@radix-ui/react-label": "^2.2.0",
-    "@radix-ui/react-menubar": "^1.2.0",
-    "@radix-ui/react-navigation-menu": "^1.3.0",
-    "@radix-ui/react-popover": "^1.2.0",
-    "@radix-ui/react-progress": "^1.2.0",
-    "@radix-ui/react-radio-group": "^1.4.0",
-    "@radix-ui/react-scroll-area": "^1.3.0",
-    "@radix-ui/react-select": "^2.3.0",
-    "@radix-ui/react-separator": "^1.2.0",
-    "@radix-ui/react-slider": "^1.4.0",
-    "@radix-ui/react-slot": "^1.3.0",
-    "@radix-ui/react-switch": "^1.3.0",
-    "@radix-ui/react-tabs": "^1.2.0",
-    "@radix-ui/react-toast": "^1.3.0",
-    "@radix-ui/react-toggle": "^1.2.0",
-    "@radix-ui/react-toggle-group": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.3.0",
-    "autoprefixer": "^10.4.28",
-    "class-variance-authority": "^0.8.0",
-    "clsx": "^2.2.0",
-    "cmdk": "^1.2.0",
-    "date-fns": "^3.1.0",
-    "embla-carousel-react": "^8.8.0",
-    "framer-motion": "^13.0.0",
-    "input-otp": "^1.5.0",
-    "lucide-react": "^1.0.0",
-    "next": "^15.6.0",
-    "next-themes": "^1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-day-picker": "^9.0.0",
-    "react-hook-form": "^8.0.0",
-    "react-icons": "^6.0.0",
-    "react-resizable-panels": "^2.3.0",
-    "recharts": "^2.20.0",
-    "sonner": "^3.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.1.0",
-    "vaul": "^1.2.0",
-    "zod": "^4.0.0"
+    "@emotion/is-prop-valid": "latest",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.1.1",
+    "date-fns": "4.1.0",
+    "embla-carousel-react": "8.6.0",
+    "framer-motion": "^12.23.25",
+    "input-otp": "1.4.2",
+    "lucide-react": "^0.556.0",
+    "next": "^15.1.0",
+    "next-themes": "latest",
+    "react": "^18.3.1",
+    "react-day-picker": "9.12.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "latest",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "3.5.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@types/node": "^22.20.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.8.5"
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.1",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.3"
   }
 }
