--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "embla-carousel-react": "8.6.0",
     "framer-motion": "^12.23.25",
     "input-otp": "1.4.2",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.556.0",
     "next": "^15.1.0",
     "next-themes": "latest",
