--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
+    "@emotion/is-prop-valid": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -43,17 +43,17 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "input-otp": "1.4.2",
     "lenis": "^1.3.15",
-    "lucide-react": "^0.556.0",
-    "next": "^15.1.0",
-    "next-themes": "latest",
-    "react": "^18.3.1",
+    "lucide-react": "^0.557.0",
+    "next": "^16.0.8",
+    "next-themes": "^0.4.6",
+    "react": "^19.2.1",
     "react-day-picker": "9.12.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
-    "react-icons": "latest",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "3.5.1",
     "sonner": "^2.0.7",
@@ -64,12 +64,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24.10.1",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.7",
+    "@types/node": "^24.10.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
   }
 }
