--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "npx serve@latest out -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
@@ -38,38 +38,41 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "browserslist": "^4.28.1",
+    "caniuse-lite": "^1.0.30001766",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
-    "framer-motion": "^12.23.26",
+    "framer-motion": "^12.29.0",
     "input-otp": "1.4.2",
-    "lenis": "^1.3.15",
-    "lucide-react": "^0.557.0",
-    "next": "^16.0.8",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
-    "react-day-picker": "9.12.0",
-    "react-dom": "^19.2.1",
-    "react-hook-form": "^7.68.0",
+    "react": "^19.2.3",
+    "react-day-picker": "9.13.0",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
-    "react-resizable-panels": "^3.0.6",
-    "recharts": "3.5.1",
+    "react-intersection-observer": "^9.16.0",
+    "react-resizable-panels": "^4.4.1",
+    "recharts": "3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.1.13"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24.10.2",
-    "@types/react": "^19.2.7",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
 }
